[gd_scene load_steps=6 format=3 uid="uid://8608fxfh6gga"]

[ext_resource type="PackedScene" uid="uid://dcixclmukxhyp" path="res://topics/template.tscn" id="1_btovm"]
[ext_resource type="Script" path="res://topics/hash_table/hash_table.gd" id="2_l51hf"]
[ext_resource type="Script" uid="uid://ewsd7j2dedwe" path="res://topics/ui/scripts/buttons_toggle.gd" id="3_1c67l"]
[ext_resource type="Theme" uid="uid://ch47gokw4nkj3" path="res://misc/theme.tres" id="4_7c8mo"]
[ext_resource type="PackedScene" uid="uid://bokar7fyhr48l" path="res://structs/hash_table/bucket_array.tscn" id="5_op5y2"]

[node name="root" node_paths=PackedStringArray("bucket_array", "bucket_count_label", "occu_label", "input_field") instance=ExtResource("1_btovm")]
script = ExtResource("2_l51hf")
bucket_array = NodePath("BucketArray")
bucket_count_label = NodePath("CanvasLayer/stackframe/MarginContainer/VBoxContainer/BucketCountLabel")
occu_label = NodePath("CanvasLayer/stackframe/MarginContainer/VBoxContainer/OccupancyLabel")
input_field = NodePath("CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/LineEdit")

[node name="ButtonInsert" type="Button" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="0" groups=["buttons_active"]]
layout_mode = 2
theme = ExtResource("4_7c8mo")
text = "insert"
script = ExtResource("3_1c67l")

[node name="ButtonRemove" type="Button" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="1" groups=["buttons_active"]]
layout_mode = 2
theme = ExtResource("4_7c8mo")
text = "remove"
script = ExtResource("3_1c67l")

[node name="ButtonSearch" type="Button" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="2" groups=["buttons_active"]]
visible = false
layout_mode = 2
theme = ExtResource("4_7c8mo")
text = "search"
script = ExtResource("3_1c67l")

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="3"]
custom_minimum_size = Vector2(333, 0)
layout_mode = 2
theme = ExtResource("4_7c8mo")
placeholder_text = "HT_ENTER_KEY"

[node name="ButtonReset" type="Button" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="4" groups=["buttons_active"]]
layout_mode = 2
theme = ExtResource("4_7c8mo")
text = "reset"

[node name="LabelHash" type="Label" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="5"]
layout_mode = 2
text = "HT_FT"

[node name="OptionButtonHash" type="OptionButton" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="6" groups=["buttons_active"]]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("4_7c8mo")
text_overrun_behavior = 3
item_count = 5
selected = 0
fit_to_longest_item = false
popup/item_0/text = "SHA256 (first 64 bits)"
popup/item_0/id = 0
popup/item_1/text = "h_1(s): |s|"
popup/item_1/id = 1
popup/item_2/text = "HT_H2"
popup/item_2/id = 2
popup/item_3/text = "HT_H3"
popup/item_3/id = 3
popup/item_4/text = "HT_H4"
popup/item_4/id = 0

[node name="stackframe" parent="CanvasLayer" index="1"]
offset_right = 254.0
offset_bottom = 168.0

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/stackframe/MarginContainer/VBoxContainer" index="0"]
visible = false
layout_mode = 2
theme = ExtResource("4_7c8mo")

[node name="Label" type="Label" parent="CanvasLayer/stackframe/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
theme = ExtResource("4_7c8mo")
text = "HashTable"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/stackframe/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2
theme = ExtResource("4_7c8mo")

[node name="size_label" parent="CanvasLayer/stackframe/MarginContainer/VBoxContainer" index="3"]
text = "SIZE"

[node name="BucketCountLabel" type="Label" parent="CanvasLayer/stackframe/MarginContainer/VBoxContainer" index="4"]
layout_mode = 2
text = "BUK_CONT"

[node name="OccupancyLabel" type="Label" parent="CanvasLayer/stackframe/MarginContainer/VBoxContainer" index="5"]
layout_mode = 2
text = "OCC_FACT"

[node name="side_panel" parent="CanvasLayer" index="2"]
is_open = true

[node name="Camera2D" parent="." index="1"]
position = Vector2(550, 550)

[node name="BucketArray" parent="." index="3" instance=ExtResource("5_op5y2")]
position = Vector2(0, 0)

[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/ButtonInsert" to="." method="_on_button_insert_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/ButtonInsert" to="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/ButtonInsert" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/ButtonRemove" to="." method="_on_button_remove_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/ButtonRemove" to="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/ButtonRemove" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/ButtonSearch" to="." method="_on_button_search_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/ButtonSearch" to="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/ButtonSearch" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="item_selected" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/OptionButtonHash" to="." method="_on_option_button_hash_item_selected"]
